docs: 更新开发文档，添加详细的项目说明和GitHub仓库地址

--- a/docs/开发文档.md
+++ b/docs/开发文档.md
@@ -1,4 +1,79 @@
-# 印刷报价系统开发文档
+# 智能印刷报价系统开发文档
+
+## 项目信息
+
+### 代码仓库
+- GitHub 仓库地址：https://github.com/xiekai378/print3.git
+- 分支说明：
+  - main：主分支，用于发布稳定版本
+  - dev：开发分支，用于日常开发
+
+### 开发环境
+- Node.js 版本：v16+
+- 包管理工具：npm
+- 开发框架：Vue 3 + TypeScript
+- UI 框架：Element Plus
+- 构建工具：Vite
+
+## 项目结构
+```
+project/
+├── docs/                # 项目文档
+├── src/                 # 源代码
+│   ├── views/          # 页面组件
+│   ├── components/     # 公共组件
+│   ├── router/         # 路由配置
+│   ├── stores/         # 状态管理
+│   └── types/          # 类型定义
+├── public/             # 静态资源
+└── package.json        # 项目配置
+```
+
+## 开发指南
+
+### 环境准备
+1. 克隆项目：
+```bash
+git clone https://github.com/xiekai378/print3.git
+cd print3
+```
+
+2. 安装依赖：
+```bash
+npm install
+```
+
+3. 启动开发服务器：
+```bash
+npm run dev
+```
+
+### 代码提交规范
+- feat: 新功能
+- fix: 修复bug
+- docs: 文档更新
+- style: 代码格式调整
+- refactor: 重构
+- test: 测试相关
+- chore: 构建过程或辅助工具的变动
+
+### 分支管理
+1. 从 main 分支创建功能分支
+2. 开发完成后提交 Pull Request
+3. 代码审查通过后合并到 main 分支
+
+## 部署说明
+
+### 构建项目
+```bash
+npm run build
+```
+
+### 部署步骤
+1. 构建项目生成 dist 目录
+2. 将 dist 目录下的文件部署到服务器
+3. 配置服务器环境变量
+4. 启动服务
 
 ## 1. 项目概述
 
@@ -160,34 +235,7 @@ Response: {
 }
 ```
 
-## 6. 部署说明
-
-### 6.1 开发环境
-1. 环境要求
-   - Node.js >= 16
-   - npm >= 7
-
-2. 安装依赖
-```bash
-npm install
-```
-
-3. 启动开发服务器
-```bash
-npm run dev
-```
-
-### 6.2 生产环境
-1. 构建
-```bash
-npm run build
-```
-
-2. 部署
-   - 将dist目录下的文件部署到Web服务器
-   - 配置nginx反向代理
-
-## 7. 开发流程
+## 6. 开发流程
 
 ### 7.1 功能开发流程
 1. 需求分析
